# Whisper_Minimal

./: .gitignore  API.md  CHANGELOG.md  COMMIT_MESSAGE.txt  README.md  api_transcriber.py  batch_transcribe.py  config.json  config_utils.py  keyboard_typer.py  recorder.py  requirements.txt  test_compress.py  text_cleaner.py  transcriber.py  unified_vad.py  whisper_minimal.py
deploy/: README_DEPLOY.md  config.json  inference_example.py
modules/vad/: PROJECT_REPORT.md  README.md  (+1 more)
notebooks/: inspect_best_student.ipynb  vad_pipeline.ipynb
portable/: build_portable.py
preprocessing/: __init__.py  chunk_config.py  create_chunks.py  extract_fbank.py  generate_teacher_labels.py
realtime/: __init__.py  pipeline.py  processor.py
scripts/: sanity_check_structure.py  validate_onnx.py
tests/: __init__.py  test_chunk_alignment.py
vad/: __init__.py  backends.py  energy_vad.py  logger.py  segmenter.py  simple_vad.py  threshold_vad.py  vad.py
vad_distill/: __init__.py  teacher.py
vad_training/: .gitignore  pyproject.toml  ruff.toml
vad_training/notebooks/: demo.opus  inference_demo.ipynb  inspect_best_student.ipynb  train_tiny_vad.ipynb
vad_training/outputs/export/: tiny_vad.onnx
vad_training/vad_distill/config/: chunk_config.py  data_paths.py  default_config.yaml
vad_training/vad_distill/preprocessing/: chunking.py  run_preprocessing_pipeline.py
vad_training/vad_distill/teacher/: __init__.py  frame_level_teacher.py  generate_teacher_labels.py  teacher_silero.py
vad_training/vad_distill/tiny_vad/: __init__.py  dataset.py  export_onxx.py  model.py
(+43 files in other folders)
