[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vad-distill"
version = "0.1.0"
description = "Tiny VAD distillation toolkit"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary"}
authors = [{name = "VAD Tiny Maintainers"}]
dependencies = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "numpy",
    "soundfile",
    "silero-vad>=0.4.0",
    "matplotlib",
    "tqdm",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "pytest",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["vad_distill*"]

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E203", "E501"]

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
python_files = "tests/test_*.py"

